--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
   <link href="./sourceFiles/css" rel="stylesheet">
   <link href="./sourceFiles/css(1)" rel="stylesheet">
   <link href="./sourceFiles/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.css">
 
   <!-- Custom styles for this template -->
   <link href="./sourceFiles/resume.min.css" rel="stylesheet">
@@ -81,6 +80,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+        </li>
         <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
           </li> -->
@@ -95,9 +97,10 @@
         <h1 class="mb-0">Bharathikannan
           <span class="text-primary">Ramakrishnan</span>
         </h1>
-        <div class="subheading mb-5">56, Nort St, T Agaram, Pennadam Po, Cuddalore Dt, Tamilnadu, India ·
+        <!-- <div class="subheading mb-5">56, Nort St, T Agaram, Pennadam Po, Cuddalore Dt, Tamilnadu, India ·
           <a href="mailto:bharathikannan@live.com">bharathikannan@live.com</a>
-        </div>
+        </div> -->
+        <div class="subheading mb-5">Front End Architecture | Senior Front End Developer | JavaScript Frameworks | JavaScript Enthusiast</div>
         <p class="lead mb-5">I have 11+ years of experience in Front End Development, specializing in creating
           responsive and user-friendly websites using React. I have led the development of multiple web applications and
           mentored junior developers on best practices and coding standards. Additionally, I have implemented
@@ -117,20 +120,6 @@
           <li>Public Services Webpages</li>
           <li>Semiconductor Industry</li>
         </ol>
-        <div class="social-icons">
-          <a href="https://www.linkedin.com/in/bharathikannan-r/" target="_blank">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-          <a href="https://github.com/bharathikannano" target="_blank">
-            <i class="fab fa-github"></i>
-          </a>
-          <a href="https://twitter.com/bharathikannano" target="_blank">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="https://www.facebook.com/Bharathikannano" target="_blank">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-        </div>
       </div>
     </section>
 
@@ -334,7 +323,7 @@
             <i class="fab fa-html5"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
+            <i class="fab fa-css3"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-js-square"></i>
@@ -366,6 +355,18 @@
           <li class="list-inline-item">
             <i class="fab fa-npm"></i>
           </li>
+          <li class="list-inline-item">
+            <i class="fa-brands fa-atlassian"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fa-brands fa-jira"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fa-brands fa-bitbucket"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fa-brands fa-confluence"></i>
+          </li>
         </ul>
 
         <div class="subheading mb-3">Workflow</div>
@@ -394,6 +395,35 @@
         <p>Apart from being a web developer, I enjoy most of my time being outdoors.</p>
         <p class="mb-0">When forced indoors, I spend a large amount of my free time exploring the latest technology
           advancements in the front-end web development world. I'm vey much inspired and passionate on JS.</p>
+      </div>
+    </section>
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="contact">
+      <div class="my-auto">
+        <h2 class="mb-5">Contact Me</h2>
+        <p><ul>
+          <li>+91 9025812322</li>
+          <li><a href="mailto:bharathikannan@live.com">bharathikannan@live.com</a></li>
+        </ul></p>
+        <div class="social-icons">
+          <a href="https://www.linkedin.com/in/bharathikannan-r/" target="_blank">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="https://github.com/bharathikannano" target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://twitter.com/bharathikannano" target="_blank">
+            <i class="fa-brands fa-x-twitter"></i>
+          </a>
+          <a href="https://www.facebook.com/Bharathikannano" target="_blank">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="mailto:bharathikannan@live.com" target="_blank">
+            <i class="fa-solid fa-envelope"></i>
+          </a>
+          <a href="https://wa.me/+919025812322" target="_blank">
+            <i class="fa-brands fa-whatsapp"></i>
+          </a>
+        </div>
       </div>
     </section>
   </div>
