--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <style id="stndz-style">
+    .my-auto {
+      h1 {
+        font-size: 4em;
+      }
+    }
     div[class*="item-container-obpd"],
     a[data-redirect*="paid.outbrain.com"],
     a[onmousedown*="paid.outbrain.com"] {
