--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style id="stndz-style">
     .my-auto {
       h1 {
-        font-size: 4em;
+        font-size: 3rem;
       }
     }
     div[class*="item-container-obpd"],
